fixed up snakemake, turned into a class. need to adjust snakemake for that.

--- a/autocluster.yml
+++ b/autocluster.yml
@@ -6,40 +6,150 @@ channels:
   - r
   - defaults
 dependencies:
-  - bzip2=1.0.8=h0b31af3_2
-  - ca-certificates=2019.11.28=hecc5488_0
-  - certifi=2019.11.28=py37_0
-  - hdbscan=0.8.24=py37h3b54f70_0
-  - joblib=0.14.1=py_0
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
-  - libcxx=9.0.0=h89e68fa_1
-  - libffi=3.2.1=h6de7cb9_1006
-  - libgfortran=4.0.0=2
-  - liblapack=3.8.0=14_openblas
-  - libopenblas=0.3.7=h3d69b6c_5
-  - llvm-openmp=9.0.0=h40edb58_0
-  - ncurses=6.1=h0a44026_1002
-  - numpy=1.17.3=py37hde6bac1_0
-  - openssl=1.0.2t=h1de35cc_0
-  - pandas=0.25.3=py37h4f17bb1_0
-  - patsy=0.5.1=py_0
-  - pip=19.3.1=py37_0
-  - python=3.7.0=h145921a_1006
-  - python-dateutil=2.8.1=py_0
-  - pytz=2019.3=py_0
-  - pyyaml=5.2=py37h0b31af3_0
-  - readline=7.0=hcfe32e1_1001
-  - scikit-learn=0.22=py37h3dc85bc_1
-  - scipy=1.3.2=py37h82752d6_0
-  - setuptools=42.0.2=py37_0
-  - six=1.13.0=py37_0
-  - sqlite=3.28.0=h9721f7c_0
-  - statsmodels=0.10.2=py37h3b54f70_0
-  - tk=8.6.10=hbbe82c9_0
-  - wheel=0.33.6=py37_0
-  - xz=5.2.4=h1de35cc_1001
-  - yaml=0.2.2=h0b31af3_1
-  - zlib=1.2.11=h0b31af3_1006
+  - aioeasywebdav=2.4.0
+  - aiohttp=3.6.2
+  - appdirs=1.4.3
+  - async-timeout=3.0.1
+  - attrs=19.3.0
+  - bcrypt=3.1.7
+  - boto3=1.10.43
+  - botocore=1.13.43
+  - bzip2=1.0.8
+  - ca-certificates=2019.11.28
+  - cachetools=3.1.1
+  - cairo=1.16.0
+  - certifi=2019.11.28
+  - cffi=1.13.2
+  - chardet=3.0.4
+  - configargparse=0.13.0
+  - cryptography=2.8
+  - datrie=0.8
+  - decorator=4.4.1
+  - docutils=0.15.2
+  - dropbox=9.4.0
+  - fftw=3.3.8
+  - filechunkio=1.8
+  - fontconfig=2.13.1
+  - freetype=2.10.0
+  - ftputil=3.4
+  - gdk-pixbuf=2.36.12
+  - gettext=0.19.8.1
+  - ghostscript=9.22
+  - giflib=5.1.7
+  - gitdb2=2.0.6
+  - gitpython=3.0.5
+  - glib=2.58.3
+  - gobject-introspection=1.58.2
+  - google-api-core=1.15.0
+  - google-auth=1.10.0
+  - google-cloud-core=1.1.0
+  - google-cloud-storage=1.23.0
+  - google-resumable-media=0.5.0
+  - googleapis-common-protos=1.6.0
+  - graphite2=1.3.13
+  - graphviz=2.38.0
+  - harfbuzz=2.4.0
+  - hdbscan=0.8.24
+  - icu=64.2
+  - idna=2.8
+  - imagemagick=7.0.8_54
+  - importlib_metadata=1.3.0
+  - jbig=2.1
+  - jinja2=2.10.3
+  - jmespath=0.9.4
+  - joblib=0.14.1
+  - jpeg=9c
+  - jsonschema=3.2.0
+  - libblas=3.8.0
+  - libcblas=3.8.0
+  - libcroco=0.6.13
+  - libcxx=9.0.0
+  - libffi=3.2.1
+  - libiconv=1.15
+  - liblapack=3.8.0
+  - libopenblas=0.3.7
+  - libpng=1.6.37
+  - libprotobuf=3.11.2
+  - librsvg=2.44.14
+  - libtiff=4.1.0
+  - libwebp=1.0.2
+  - libxcb=1.13
+  - libxml2=2.9.10
+  - llvm-openmp=9.0.0
+  - lz4-c=1.8.3
+  - markupsafe=1.1.1
+  - more-itertools=8.0.2
+  - mpi=1.0
+  - mpich=3.3.2
+  - multidict=4.6.1
+  - ncurses=6.1
+  - networkx=2.4
+  - numpy=1.17.3
+  - openjpeg=2.3.1
+  - openssl=1.1.1d
+  - pandas=0.25.3
+  - pango=1.40.14
+  - paramiko=2.7.1
+  - patsy=0.5.1
+  - pcre=8.43
+  - perl=5.26.2
+  - pip=19.3.1
+  - pixman=0.38.0
+  - pkg-config=0.29.2
+  - prettytable=0.7.2
+  - protobuf=3.11.2
+  - psutil=5.6.7
+  - pthread-stubs=0.4
+  - pyasn1=0.4.8
+  - pyasn1-modules=0.2.7
+  - pycparser=2.19
+  - pygments=2.5.2
+  - pygraphviz=1.5
+  - pynacl=1.3.0
+  - pyopenssl=19.1.0
+  - pyrsistent=0.15.6
+  - pysftp=0.2.9
+  - pysocks=1.7.1
+  - python=3.7.3
+  - python-dateutil=2.8.0
+  - python-irodsclient=0.7.0
+  - pytz=2019.3
+  - pyyaml=5.2
+  - ratelimiter=1.2.0
+  - readline=8.0
+  - requests=2.22.0
+  - rsa=4.0
+  - s3transfer=0.2.1
+  - scikit-learn=0.22
+  - scipy=1.4.0
+  - setuptools=42.0.2
+  - six=1.13.0
+  - smmap2=2.0.5
+  - snakemake=5.8.2
+  - snakemake-minimal=5.8.2
+  - sqlite=3.30.1
+  - statsmodels=0.10.2
+  - tk=8.6.10
+  - urllib3=1.25.7
+  - wheel=0.33.6
+  - wrapt=1.11.2
+  - xmlrunner=1.7.7
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.6.9
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-libxt=1.2.0
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
+  - xz=5.2.4
+  - yaml=0.2.2
+  - yarl=1.3.0
+  - zipp=0.6.0
+  - zlib=1.2.11
+  - zstd=1.4.4
 prefix: /Users/lili/anaconda3/envs/autocluster
-
