--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+python>=3.7.0
 pandas>=0.24.2
 numpy>=1.16.4
 scipy>=1.2.1
 scikit-learn>=0.22.0
 sphinx-argparse==0.2.5
 sphinx-autodoc-typehints==1.7.0
+hdbscan>=0.8.24
