--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -10,6 +10,6 @@ hdbscan==0.8.24
 snakemake==5.8.2
 matplotlib==3.1.2
 seaborn==0.9.0
-python-igraph==0.7.1
+python-igraph==0.7.1.post6
 louvain==0.6.1
 leidenalg==0.7.0
